correct the dark mode theme

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,7 +1,3 @@
-body {
-  background: white;
-}
-
 #brand .icon {
   width: 125px !important;
 }
